--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 
     <h1>Text to Morsecode Converter</h1>
 
-    <div id="textBoxDiv">
-        <p>Enter text to be converted:</p>
-        <input type="text" id="inputBox" name="Text Box"></input>
+    <form>
+        <fieldset>
+            <legend id="textareaTitle"><b>Enter text to be converted:</b></legend>
+            <textarea id="inputBox" name="Text Box" placeholder="Enter your input here"></textarea>
 
-        <br>
+        </fieldset>
 
-        <button type="button" onclick=ConvertTextToMorse()>
-            Convert
-        </button>
-    </div>
+        <input type="button" value="Convert">
+    </form>
 
-    <p id="demo"></p>
+    <p id="output"></p>
 
     </body>
 </html> 
