Now calls a method on user input
Also changed some of the look. This means pretty much everything other than the conversion code is completed (Other than styling the website neatly).

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form>
         <fieldset>
             <legend id="textareaTitle"><b>Enter text to be converted:</b></legend>
-            <textarea id="inputBox" name="Text Box" placeholder="Enter your input here"></textarea>
+            <textarea id="inputBox" name="Text Box" placeholder="Enter your input here" oninput=textChanged()></textarea>
 
         </fieldset>
 
