Allows spaces and unrecognised characters appear as '?'
Also changed some of the style

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         <fieldset>
             <legend id="textareaTitle"><b>Enter text to be converted:</b></legend>
             <textarea id="inputBox" name="Text Box" placeholder="Enter your input here" oninput=textChanged()></textarea>
-
         </fieldset>
-
-        <input type="button" value="Convert">
     </form>
-
-    <p id="output"></p>
+    
+    <form>
+        <fieldset>
+            <legend id="textareaTitle"><b>Your output:</b></legend>
+            <p id="output"></p>
+        </fieldset>
+    </form>
 
     </body>
 </html> 
